<resources>
    <string name="filestack__picker_title">Filestack Picker</string>
    <string name="filestack__picker_drawer_title">Sources</string>

    <string name="filestack__nav_drawer_open">Open navigation drawer</string>
    <string name="filestack__nav_drawer_close">Close navigation drawer</string>

    <string name="filestack__source_camera">Camera</string>
    <string name="filestack__source_device">Device</string>
    <string name="filestack__source_facebook">Facebook</string>
    <string name="filestack__source_instagram">Instagram</string>
    <string name="filestack__source_google_drive">Google Drive</string>
    <string name="filestack__source_dropbox">Dropbox</string>
    <string name="filestack__source_box">Box</string>
    <string name="filestack__source_github">GitHub</string>
    <string name="filestack__source_gmail">Gmail</string>
    <string name="filestack__source_google_photos">Google Photos</string>
    <string name="filestack__source_onedrive">OneDrive</string>
    <string name="filestack__source_amazon_drive">Amazon Drive</string>

    <string name="filestack__menu_view_grid">View as grid</string>
    <string name="filestack__menu_view_list">View as list</string>
    <string name="filestack__menu_logout">Logout</string>
    <string name="filestack__menu_upload">Upload</string>
    <string name="filestack__menu_about">About</string>

    <string name="filestack__auth_description">You need to authenticate with Cloud.\nWe only extract files and never modify or delete them.</string>
    <string name="filestack__auth_title">Select Files From Cloud</string>
    <string name="filestack__auth_button">Connect Cloud</string>
    <string name="filestack__auth_action">The browser will open to connect your account.</string>
    <string name="filestack__auth_icon_description">Cloud Logo</string>
    <string name="filestack__auth_temp_success">Cloud is Authorized</string>

    <string name="filestack__camera_take_photo">Take Photo</string>
    <string name="filestack__camera_take_video">Take Video</string>

    <string name="filestack__local_files_select">Select Local Files</string>

    <string name="filestack__notify_channel_upload_name">Upload Progress</string>
    <string name="filestack__notify_channel_upload_description">Progress updates for uploads</string>

    <string name="filestack__redirect_uri" translatable="false">filestack://done</string>
</resources>
