<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_upload"
        android:title="@string/filestack__menu_upload"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:visible="false"/>
    <item
        android:id="@+id/action_toggle_list_grid"
        android:icon="@drawable/filestack__ic_menu_grid_white"
        android:title="@string/filestack__menu_view_grid"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/filestack__menu_logout"
        android:visible="false"
        app:showAsAction="never"
        android:orderInCategory="3"/>

    <item android:id="@+id/action_about"
        android:title="@string/filestack__menu_about"
        android:visible="false"
        app:showAsAction="never"
        android:orderInCategory="100"/>
</menu>
